--- a/index.html
+++ b/index.html
@@ -161,7 +161,8 @@
   <div class="open">
     <div class="card">
       <h2>There's a message for you</h2>
-      <img onclick="mulai()" src="https://i.postimg.cc/7ZH3t5dL/mail.png" alt="" srcset="" />
+      <!-- <img onclick="mulai()" src="https://i.postimg.cc/7ZH3t5dL/mail.png" alt="" srcset="" /> -->
+      <button onclick="mulai()">Press me</button>
       <h3>
         Press to open</h3>
     </div>
