--- a/image.html
+++ b/image.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Aadil</title>
   <style>
     body{
       height: 100vh;
@@ -15,6 +15,6 @@
   </style>
 </head>
 <body>
-  <P>Aa jao wapas dm me!! idhar nai milega</P>
+  <P>India team ka bhi comeback ho gaya, tera kab hoga noobde</P>
 </body>
 </html>
