--- a/index.html
+++ b/index.html
@@ -3,18 +3,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Aadil</title>
-  <style>
-    body{
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-
-  </style>
+  <title>Document</title>
 </head>
 <body>
-  
+  <p>amu is bad boy</p>
 </body>
 </html>
