--- a/index.html
+++ b/index.html
@@ -1,20 +1,23 @@
-<!DOCTYPE html>
-<html lang="en">
+<html>
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-  <style>
-    body{
-      width: 100%;
-      height: 100vh;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-  </style>
+  <title>love you</title>
 </head>
 <body>
-  <p>i love you</p>
+  
+
+<div class="bg_heart">
+</div>
+
+<div class="container">
+ 
+
+<h2 id="text1"></h2>
+
+
+  </div>
+  
+
+
+
 </body>
 </html>
