--- a/index.html
+++ b/index.html
@@ -1,23 +1,20 @@
-<html>
+<!DOCTYPE html>
+<html lang="en">
 <head>
-  <title>love you</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
 </head>
 <body>
-  
-
-<div class="bg_heart">
-</div>
-
-<div class="container">
- 
-
-<h2 id="text1"></h2>
-
-
+  <div class="bg_heart">
   </div>
   
-
-
-
+  <div class="container">
+   
+  
+  <h2 id="text1"></h2>
+  
+  
+    </div>
 </body>
 </html>
