--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
   <div class="bg_heart">
@@ -16,5 +17,6 @@
   
   
     </div>
+    <script src="main.js"></script>
 </body>
 </html>
